# Calenda

./: .env.example  .gitignore  ARCHIVE.md  CLAUDE.md  HANDOFF.md  LIGHTNING_AI_GUIDE.md  README.md  SETUP.md  pyproject.toml  run_generate.ps1  run_qa.ps1  watch_progress.ps1
.claude/: settings.json
android/: GMAIL_API.md  README.md  build.gradle.kts  build_log.txt  clean-build.ps1  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
configs/: lora.yaml  model_gemma4_e2b.yaml  model_hyperclova.yaml  model_qwen.yaml  model_qwen3_0_6b.yaml  model_qwen3_1_7b.yaml  model_qwen_1_5b.yaml  train.yaml  train_1_5b.yaml  train_colab.yaml  train_gemma4_e2b.yaml  train_lightning_1_5b.yaml  train_lightning_qwen3_0_6b.yaml  train_qwen3_0_6b.yaml  train_qwen3_1_7b.yaml
data/eval/: ad_negative.jsonl  eval_c2-qwen3-0.6b.json  eval_c4-qwen3-0.6b.json  gmail_real.jsonl  golden.jsonl  kakao_real.jsonl  real_golden.jsonl  sms_real.jsonl
data/failures/: c3_reinforcement_plan.md
data/processed/: ad_negative.jsonl  base_r16.jsonl  c3_reinforce.jsonl  c4_reinforce.jsonl  cowork_boost.jsonl  gmail_real_train.jsonl  golden.jsonl  kakao_real.jsonl  r14_hardcases.jsonl  r15_hardcases.jsonl  r16_hardcases.jsonl  r17_hardcases.jsonl  r18_hardcases.jsonl  r19_hardcases.jsonl  r20_hardcases.jsonl  r21_hardcases.jsonl  r22_hardcases.jsonl  (+8 more)
docs/: 설치가이드.md
logs/: audit_r15.json  eval_c14-qwen3-0.6b.json  eval_c9-qwen3-0.6b.json  eval_d9-qwen3-0.6b.json  eval_r11-qwen.json  eval_r11_gmail.json  eval_r12-qwen0.5b_local.json  eval_r12-qwen0.5b_on43.json  eval_r15-qwen0.5b.json  eval_r19-qwen0.5b.json  eval_r23-qwen0.5b.json  eval_r27-qwen0.5b.json  eval_r30-qwen3-0.6b.json
notebooks/: calenda_kaggle.ipynb  calendar_colab.ipynb  calendar_gemma4.ipynb  calendar_kaggle.ipynb  calendar_labeler.ipynb  calendar_lightning.ipynb  calendar_quantize.ipynb  colab_train.ipynb  kaggle_train.ipynb  kaggle_train_hyperclova.ipynb
prompts/: evaluator.md  generator.md  planner.md  schedule_criterion.md  schema.md
scripts/: _common.py  anonymize.py  apply_r31.py  apply_r33.py  apply_r34.py  assemble_train.py  audit_eval.py  audit_schedule.py  build_ad_negatives.py  build_c1_assemble.py  build_c1_negatives.py  build_c2_assemble.py  build_kakao_dataset.py  build_r14_hardcases.py  build_r15_hardcases.py  build_r16_hardcases.py  build_r17_hardcases.py  build_r18_hardcases.py  build_r19_hardcases.py  build_r20_hardcases.py  build_r21_hardcases.py  build_r22_hardcases.py  build_r28_hardcases.py  build_r30_hardcases.py  build_r31_hardcases.py  build_r32_hardcases.py  build_r33_hardcases.py  build_r34_hardcases.py  build_r35_assemble.py  build_r35_negatives.py  build_sms_dataset.py  eval_gguf.py  eval_model.py  evaluate_data.py  fix_relative_dates.py  gen_discipline.py  gen_distractor_confirm.py  gen_other_confirm.py  gen_thread_confirm.py  gen_weekend_boost.py  (+13 more)
ui/: streamlit_app.py
(+95 files in other folders)
